--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
   },
   "repository": {
     "url": "https://github.com/alrik/iterate-javascript"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "dependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.1.0"
   }
 }
