--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iterate-it",
+  "name": "@a-z/iterate-it",
   "version": "0.1.0",
   "description": "A handy function with a unified interface to iterate Strings, Arrays, TypedArrays, Maps, Sets, (any Iterables) & Objects.",
   "license": "MIT",
@@ -30,8 +30,11 @@
   "scripts": {
     "test": "mocha"
   },
-  "dependencies": {
+  "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.1.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
